# trade-journal

./: .gitignore  AGENTS.md  README.md  bugs  pyproject.toml  pyrightconfig.json  ruff.toml
config/: accounts.toml  accounts.toml.example  app.toml  app.toml.example
docs/: how-to-hyperliquid.md
docs/decisions/: 0001-what-is-a-trade.md  0002-trade-excursion-metrics.md  0003-fills-first-ingestion.md  0004-symbol-netting-one-way-positions.md  0005-fee-allocation-and-net-pnl.md  0006-timestamp-normalization-utc.md  0007-funding-fee-attribution.md  0008-price-series-granularity-and-bar-extremes.md  0009-price-symbol-and-time-parameters.md  0010-soft-fail-price-series.md  0011-outcome-thresholds.md  0012-metrics-use-net-pnl.md  0013-return-percent-denominator.md  0014-excursion-display-units.md  0015-web-ui-data-sourcing-and-timing.md  0016-web-ui-architecture-and-tech.md  0017-liquidation-source.md  0018-initial-stop-for-r.md  0019-position-epsilon.md  0020-persistence-sync-contract.md  0021-data-validation-contract.md  0022-sync-error-policy.md  0023-schema-versioning.md  0024-drawdown-and-time-buckets.md  0025-performance-score.md  0025-zella-score.md  0026-fill-status-filtering.md  0027-equity-history-snapshots.md  0028-tags-and-strategy-taxonomy.md  0029-benchmark-price-series.md  0030-regime-labels.md  0031-account-metadata-shape.md  0032-trade-id-deterministic-hash.md  0033-session-filter-windows.md  0034-phase2-diagnostics-metrics.md  0035-strategy-attribution-counting.md  0036-size-bucket-definition.md  0037-regime-attribution.md  0038-duration-bins.md  0039-hyperliquid-account-id-wallet-address.md  (+7 more)
docs/review/: analytics_phase2_spec.md  analytics_vision_spec.md  analytics_vision_spec_review.md  hyperliquid_integration_draft.md  hyperliquid_phase2_spec_draft.md
reference/: deep_research_sample_plan.md  tradezella_deep_research.md  zella_score.md
reference/api/: api_demo.py
reference/api/Apex/: apex_api_cheatsheet.md  apex_api_doc.md  api_demo.py  shapes.json
reference/api/Hyperliquid/: api_reference_HL.md
reference/frontend_briefs/: analytics_phase_2_1.md  analytics_phase_2_2.md
scripts/: test
src/trade_journal/: __init__.py  __main__.py  backfill_price_bars_apex.py  backfill_price_bars_hyperliquid.py  cli.py  compute_excursions.py  derive_liquidations.py  export_sqlite.py  fetch_account.py  fetch_fills.py  fetch_funding.py  fetch_historical_pnl.py  fetch_history_orders.py  fetch_liquidations.py  import_equity_history.py  metrics_summary.py  models.py  probe_api.py  reconcile.py  sample_fills.py  sanity_hyperliquid.py  sanity_report.py  sync_api.py  sync_sqlite.py  verify.py
src/trade_journal/config/: accounts.py  app_config.py
src/trade_journal/ingest/: __init__.py  apex_api.py  apex_equity.py  apex_funding.py  apex_liquidations.py  apex_omni.py  apex_orders.py  hyperliquid.py  hyperliquid_api.py
src/trade_journal/metrics/: __init__.py  equity.py  excursions.py  risk.py  series.py  summary.py  targets.py
src/trade_journal/pricing/: apex_prices.py  hyperliquid_prices.py
src/trade_journal/reconstruct/: __init__.py  funding.py  trades.py
src/trade_journal/storage/: __init__.py  sqlite_reader.py  sqlite_store.py
src/trade_journal/web/: __init__.py  analytics_phase1_spec.md  analytics_phase2_spec.md  app.py
src/trade_journal/web/static/: app.css
src/trade_journal/web/templates/: analytics.html  base.html  calendar.html  dashboard.html  trade_detail.html  trades.html
