[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-journal"
version = "0.0.0"
description = "Local-first trade journal based on ApeX Omni data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "jinja2>=3.1",
  "tomli>=2.0.1; python_version < '3.11'",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]


[project.scripts]
trade-journal = "trade_journal.cli:main"
trade-journal-fetch-fills = "trade_journal.fetch_fills:main"
trade-journal-fetch-historical-pnl = "trade_journal.fetch_historical_pnl:main"
trade-journal-fetch-funding = "trade_journal.fetch_funding:main"
trade-journal-fetch-liquidations = "trade_journal.fetch_liquidations:main"
trade-journal-fetch-history-orders = "trade_journal.fetch_history_orders:main"
trade-journal-reconcile = "trade_journal.reconcile:main"
trade-journal-sample-fills = "trade_journal.sample_fills:main"
trade-journal-sanity-report = "trade_journal.sanity_report:main"
trade-journal-metrics = "trade_journal.metrics_summary:main"
trade-journal-excursions = "trade_journal.compute_excursions:main"
trade-journal-probe-api = "trade_journal.probe_api:main"
trade-journal-verify = "trade_journal.verify:main"
trade-journal-web = "trade_journal.web.app:main"
trade-journal-import-equity-history = "trade_journal.import_equity_history:main"
trade-journal-sync-api = "trade_journal.sync_api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"trade_journal.web" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

select = [
  "F",   # Pyflakes: undefined names, unused imports, etc.
  "E4",  # Import errors
  "E7",  # Syntax errors
  "E9",  # Runtime errors
  "W6",  # Invalid escape sequences
]

ignore = [
  "F401", # Allow unused imports (exploration, scaffolding)
  "F841", # Allow assigned-but-unused variables
]

fix = true
show-fixes = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["F841"]
